@@ -1,11 +1,7 @@
 package org.fenixedu.legalpt.domain.raides;
 
-import java.math.BigDecimal;
-
-import org.fenixedu.academic.domain.ExecutionYear;
 import org.fenixedu.bennu.core.domain.Bennu;
 import org.fenixedu.bennu.core.security.Authenticate;
-import org.fenixedu.legalpt.domain.raides.report.RaidesPeriodInputType;
 import org.fenixedu.legalpt.domain.raides.report.RaidesRequestParameter;
 import org.joda.time.format.DateTimeFormat;
 import org.joda.time.format.DateTimeFormatter;
@@ -21,25 +17,6 @@ public class RaidesReportRequestDefaultData implements IRaidesReportRequestDefau
 
     @Override
     public void fill(final RaidesRequestParameter raidesRequestParameter) {
-
-        // Enrolment periods
-
-        raidesRequestParameter.addPeriod(RaidesPeriodInputType.ENROLLED, ExecutionYear.readExecutionYearByName("2015/2016"),
-                DATETIME_FORMATTER.parseDateTime("01/04/2015").toLocalDate(),
-                DATETIME_FORMATTER.parseDateTime("31/03/2016").toLocalDate(), true, false, BigDecimal.ZERO, BigDecimal.ZERO,
-                false, 0, 0);
-
-        // Graduation periods
-
-        // International Mobility
-        raidesRequestParameter.addPeriod(RaidesPeriodInputType.INTERNATIONAL_MOBILITY,
-                ExecutionYear.readExecutionYearByName("2015/2016"), DATETIME_FORMATTER.parseDateTime("01/09/2015").toLocalDate(),
-                DATETIME_FORMATTER.parseDateTime("31/03/2016").toLocalDate(), true, false, BigDecimal.ZERO, BigDecimal.ZERO,
-                false, 0, 0);
-
-        // Degrees
-        raidesRequestParameter.getDegrees().addAll(RaidesInstance.getInstance().getDegreesToReportSet());
-
         // AgreementsForEnrolled
         raidesRequestParameter.getAgreementsForEnrolled().addAll(RaidesInstance.getInstance().getEnrolledAgreementsSet());
 
@@ -62,7 +39,7 @@ public class RaidesReportRequestDefaultData implements IRaidesReportRequestDefau
         raidesRequestParameter
                 .setInstitutionCode(!Strings.isNullOrEmpty(RaidesInstance.getInstance().getInstitutionCode()) ? RaidesInstance
                         .getInstance().getInstitutionCode() : Bennu.getInstance().getInstitutionUnit().getCode());
-        raidesRequestParameter.setMoment("2");
+        raidesRequestParameter.setMoment("1");
         raidesRequestParameter.setInterlocutorName(Authenticate.getUser().getPerson().getName());
         raidesRequestParameter.setInterlocutorEmail(Authenticate.getUser().getPerson().getDefaultEmailAddressValue());
         raidesRequestParameter.setInterlocutorPhone(RaidesInstance.getInstance().getInterlocutorPhone());
